[gd_scene load_steps=12 format=3 uid="uid://cbdnkjgthnkex"]

[ext_resource type="Texture2D" uid="uid://bleqvy00ws76l" path="res://pop_up/pop_up.png" id="1_j857j"]
[ext_resource type="Script" path="res://pop_up/pop_up.gd" id="2_i1lak"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u1fxl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3c45x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k0gw3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dx1av"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_65f68"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8dvy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x6k4e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ikpo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6dplo"]

[node name="PopUp" type="TextureRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -52.0
offset_right = 132.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_j857j")
script = ExtResource("2_i1lak")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 225.0
offset_bottom = 87.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_u1fxl")

[node name="Question" type="VBoxContainer" parent="PanelContainer"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 4
metadata/_edit_group_ = true

[node name="Question" type="RichTextLabel" parent="PanelContainer/Question"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 10
text = "Temporary"
fit_content = true

[node name="Option1" type="Button" parent="PanelContainer/Question"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_3c45x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_k0gw3")
text = "Temporary"
alignment = 0

[node name="Option2" type="Button" parent="PanelContainer/Question"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_dx1av")
theme_override_styles/normal = SubResource("StyleBoxEmpty_65f68")
text = "Temporary
"
alignment = 0

[node name="Option3" type="Button" parent="PanelContainer/Question"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_r8dvy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_x6k4e")
text = "Temporary"
alignment = 0

[node name="Validation" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Message" type="RichTextLabel" parent="PanelContainer/Validation"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 10
text = "Temporary"
fit_content = true

[node name="GoBack" type="Button" parent="PanelContainer/Validation"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/hover = SubResource("StyleBoxFlat_2ikpo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6dplo")
text = "Go Back"

[connection signal="pressed" from="PanelContainer/Question/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="PanelContainer/Question/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="PanelContainer/Question/Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="PanelContainer/Validation/GoBack" to="." method="_on_go_back_pressed"]
